src/test/resources/syntactic/tests/error/TC_ERROR_CODE_AFTER_START.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 7 | COLUMNA 1 | SE ESPERABA: Token EOF. SE ENCONTRO: pSTRUCT |
start{
    Int a;
}
struct Fibonacci {
    Int suma;
    Int i,j;
}